tetrate/tis1701/check-compliance-policy-env.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-compliance-policy-env
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-compliance-policy-env
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "The COMPLIANCE_POLICY environment variable must be present with value 'fips-140-2'"
        pattern:
          spec:
            template:
              spec:
                containers:
                  - env:
                      - name: "COMPLIANCE_POLICY"
                        value: "fips-140-2"
